syntax = "proto3";

package auditlog;

import "proto/api_key.proto";
import "proto/context.proto";
import "proto/grp.proto";
import "proto/acl.proto";
import "google/protobuf/timestamp.proto";

message AuthenticatedAPIKey {
  // The ID of the API key, e.g. AK123456.
  string id = 1;
  // The label of the API key at the time of the event.
  string label = 2;
}

message AuthenticatedUser {
  // The ID of the user, e.g. US123
  string user_id = 1;
  // Email address of the user, may not be populated for certain account types.
  string user_email = 2;
}

message AuthenticationInfo {
  // Populated for events on behalf of authenticated users.
  AuthenticatedUser user = 1;
  // Populated for events on behalf of authenticated API keys.
  AuthenticatedAPIKey api_key = 2;
  string client_ip = 3;
}

enum ResourceType {
  UNKNOWN_RESOURCE = 0;
  GROUP_API_KEY = 1;
  USER_API_KEY = 2;
  GROUP = 3;
  GROUP_USER = 4;
  SECRET = 5;
  INVOCATION = 6;
}

message ResourceID {
  ResourceType type = 1;
  string id = 2;
  string name = 3;
}

message Entry {
  google.protobuf.Timestamp event_time = 1;

  AuthenticationInfo authentication_info = 2;

  ResourceID resource = 3;

  // Operation performed on resource, e.g. apiKeys.create, apiKeys.update,
  // groups.update, etc
  string method = 4;

  // Additional metadata describing the change performed.
  // Only one field will be populated depending on the event type.
  message ResourceState {
    APIKeyState api_key = 1;
    GroupState group = 2;
    GroupUserState group_users = 3;
    InvocationState invocation = 4;
  }
  ResourceState old_state = 5;
  ResourceState new_state = 6;
  string diff_state = 7;
}

message User {
  string user_id = 1;
  string user_email = 2;
}

message APIKeyState {
  string label = 1;
  User user = 2;
  repeated api_key.ApiKey.Capability capabilities = 3;
  bool visible_to_developers = 4;
}

message InvocationState {
  acl.ACL acl = 1;
}

message GroupState {
  string name = 1;
  string url_identifier = 2;
  string auto_add_domain_members = 3;
  bool invocation_sharing_enabled = 4;
  bool user_owned_api_keys_enabled = 5;
  bool default_to_self_hosted_executors = 6;
  bool cache_customer_managed_encryption_key_enabled = 7;
  grp.SuggestionPreference suggestion_preference = 8;
}

message GroupUserState {
  User user = 1;
  grp.Group.Role role = 2;
}

message GetAuditLogsRequest {
  context.RequestContext request_context = 1;

  string page_token = 2;
  google.protobuf.Timestamp timestamp_after = 3;
  google.protobuf.Timestamp timestamp_before = 4;
  ResourceID resource = 5;
  string method = 6;
}

message GetAuditLogsResponse {
  context.ResponseContext response_context = 1;

  repeated Entry entries = 2;
  string next_page_token = 3;
}
